@@ -197,8 +197,9 @@ word-continuation:			archaic
 not-exception-before-exception:		ok
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
-constant-01:				ok
 constant-78:				unconformable
+constant-01:				ok
+perform-varying-without-by:		ok
 program-prototypes:			ok
 reference-out-of-declaratives:		error
 numeric-value-for-edited-item:		error
