@@ -197,8 +197,9 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
-constant-01:				unconformable
 constant-78:				unconformable
+constant-01:				unconformable
+perform-varying-without-by:		unconformable
 program-prototypes:			unconformable
 reference-out-of-declaratives:		error  # not verified yet
 numeric-value-for-edited-item:		error
