@@ -206,8 +206,9 @@ word-continuation:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
-constant-01:				ok
 constant-78:				ok
+constant-01:				ok
+perform-varying-without-by:		ok
 program-prototypes:			ok
 reference-out-of-declaratives:		warning
 numeric-value-for-edited-item:		ok
