@@ -94,8 +94,9 @@ word-continuation:			ok
 not-exception-before-exception:		+warning
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
-constant-01:				ok
 constant-78:				ok
+constant-01:				ok
+perform-varying-without-by:		ok
 program-prototypes:			ok
 reference-out-of-declaratives:		+warning
 numeric-value-for-edited-item:		+warning
