@@ -200,8 +200,9 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
-constant-01:				unconformable
 constant-78:				ok
+constant-01:				unconformable
+perform-varying-without-by:		unconformable
 program-prototypes:			ok
 reference-out-of-declaratives:		warning  # not verified yet
 numeric-value-for-edited-item:		error
