@@ -204,8 +204,9 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
 renames-uncommon-levels:		unconformable
-constant-01:				unconformable
 constant-78:				ok
+constant-01:				unconformable
+perform-varying-without-by:		unconformable
 program-prototypes:			unconformable
 reference-out-of-declaratives:		error  # TO-DO: error when referring to non-USE-statement DECLARATIVE sections
 numeric-value-for-edited-item:		error
