@@ -461,6 +461,7 @@ test.conf: missing definitions:
 	no definition of 'renames-uncommon-levels'
 	no definition of 'constant-78'
 	no definition of 'constant-01'
+	no definition of 'perform-varying-without-by'
 	no definition of 'program-prototypes'
 	no definition of 'reference-out-of-declaratives'
 	no definition of 'numeric-value-for-edited-item'
