@@ -1,4 +1,10 @@
 
+2017-12-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* config.def, parser.y: FR #158 added cb_perform_varying_without_by
+	* parser.y: FR #168 adding missing compile time checks for
+	  PERFORM BY ZERO
+
 2017-12-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c: FR 259 delete temporary files as soon as possible:
